# changaiERP

./: README.md  pyproject.toml
changai/: hooks.py
changai/changai/Datasets_2_v1/: meta.json
changai/changai/api/v2/: ai_translate.py  auto_gen_api.py  build_cards_faiss_index_v2.py  clients.py  create_qr.py  emb_load_service.py  embedding_client.py  format_output.py  helpdesk_api.py  non_erp_handler.py  operations.py  retrieve.py  schema_utils.py  store_chats.py  text2sql_pipeline_v2.py
changai/changai/api/v2/assets/: business_keywords_v1.json  changai_alias_map.json  metaschema_clean_v2.json  non_erp_combined.csv  non_erp_combined.processed.cache.pkl
changai/changai/api/v2/fvs_stores/erpnext/emb_dir/: field_docs.pkl
changai/changai/api/v2/fvs_stores/erpnext/report_fvs/: index.faiss  index.pkl
changai/changai/api/v2/fvs_stores/erpnext/table_fvs/: index.faiss  index.pkl
changai/changai/doctype/changai_settings/: changai_settings.js  changai_settings.json
changai/changai/prompts/: sql_prompt.txt  sql_rewrite_sys_prompt.txt  sql_rewrite_user_prompt.txt  sql_system_prompt.txt  sql_user_prompt.txt  support_sys_prompt.txt  support_user_prompt.txt  test.txt  user_friendly_prompt.txt
changai/changai/replicate_model_files/changai_retriever/.cog/: openapi_schema.json
changai/changai/replicate_model_files/changai_retriever/.cog/tmp/build20251119113343.789672/: requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.vue  tailwind.css
frontend/src/components/: ChatForm.vue  ChatMessage.vue  ChatbotPopup.vue  SettingsTab.vue
frontend/src/utils/: frappe.js
