[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changai"
authors = [
    { name = "ERpGulf", email = "support@erpgulf.com"}
]
description = "ChangAI"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
    "cffi>=1.17.1",
    "openai>=1.64.0,<2.0.0",
    "anthropic>=0.79.0,<1.0.0",
    "google-genai>=1.60.0,<2.0.0",
    "google-auth>=2.38.0",
    "google-cloud-aiplatform>=1.135.0,<2.0.0",
    "langchain-core",
    "langchain-community",
    "langchain-huggingface",
    "langgraph",
    "symspellpy>=6.7.7,<7.0.0",
    "transformers>=4.49.0,<5.0.0",
    "sentence-transformers>=5.0.0",
    "huggingface_hub>=0.23.0,<1.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "numpy>=1.22.0,<2.0.0",
    "sqlglot>=27.0.0",
    "boto3>=1.34.0,<1.35.0",
    "PyQRCode>=1.2.1",
    "pypng>=0.20220715.0",
    "opencv-python-headless>=4.8.0,<5.0.0"
]

# --- ADD THIS PACKAGES DIRECTIVE TO FIX INDEPENDENT FLAT DISCOVERY ---
[tool.setuptools]
packages = ["changai"]

[tool.setuptools.dynamic]
version = {attr = "changai.__version__"}

[tool.bench.dev-dependencies]

[tool.bench.frappe-dependencies]
    frappe = ">=15.0.0,<=17.0.0-dev"